# etp-dss

./: .env.example  CLAUDE.md  Dockerfile  README.md  av_worker.py  docker-compose.yml  justfile  pyproject.toml
app/: config.py  dependencies.py  main.py
app/api/v2/: exception_handlers.py  routes_download.py  routes_download_token.py  routes_health.py  routes_metadata.py  routes_public.py  routes_upload.py  routes_upload_token.py
app/domain/: db_models.py  download_token_service.py  exceptions.py  file_service.py  hash_calculator.py  kafka_schemas.py  quarantine_service.py  scanner.py  schemas.py  upload_token_service.py  validators.py
app/infrastructure/: auth.py  av_consumer.py  av_task_producer.py  clamav_scanner.py  correlation.py  events.py  kafka_producer.py  metrics.py
app/storage/: cache_client.py  metadata_repository.py  s3_client.py
docs/: tz_dss.md
docs/superpowers/plans/: 2026-03-16-slice2-quarantine-av-scanning.md  (+1 more)
migrations/: env.py
tests/integration/: conftest.py  test_upload_download.py
tests/unit/: test_auth.py  test_av_consumer.py  test_av_task_producer.py  test_av_worker.py  test_cache_client.py  test_clamav_scanner.py  test_config.py  test_correlation.py  test_db_models.py  test_download_guard.py  test_download_token_service.py  test_events.py  test_file_service.py  test_hash_calculator.py  test_health.py  test_kafka_producer.py  test_kafka_schemas.py  test_metadata_repository.py  test_metrics.py  test_quarantine_service.py  test_s3_client.py  test_scanner_protocol.py  test_schemas.py  test_upload_token_service.py  test_validators.py
(+2 files in other folders)
