[project]
name = "dss"
version = "0.1.0"
description = "Document Storage Service for ETP"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.30.0",
    "alembic>=1.14.0",
    "aiobotocore>=2.15.0",
    "redis[hiredis]>=5.2.0",
    "pyjwt>=2.9.0",
    "structlog>=24.0.0",
    "prometheus-client>=0.21.0",
    "pydantic-settings>=2.6.0",
    "aiohttp>=3.11.0",
    "aiokafka>=0.12.0",
    "python-multipart>=0.0.12",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.28.0",
    "ruff>=0.8.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = ["integration: marks tests as integration tests (require running services)"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP"]
